# hdf5-json

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  testall.py
.github/workflows/: documentation.yml  main.yml  pages.yml  publish-pages.yml  python-package.yml
Docker/: Dockerfile  Dockerfile.schema  README.md
data/hdf5/: README  committed_type.h5  compound_array_vlen_string.h5  h5ex_d_szip.h5  scalar_array_dset.h5
data/json/: README  array_attr.json  array_dset.json  arraytype.json  attr1k.json  bool_attr.json  bool_dset.json  committed_type.json  comp_complex.json  compound.json  compound_array.json  compound_array_vlen_string.json  compound_attr.json  compound_committed.json  dim_scale.json  dim_scale_data.json  dset_creationprop.json  empty.json  enum_attr.json  enum_dset.json  fillvalue.json  fixed_string_attr.json  fixed_string_dset.json  h5ex_d_alloc.json  h5ex_d_checksum.json  h5ex_d_chunk.json  h5ex_d_compact.json  h5ex_d_fillval.json  h5ex_d_gzip.json  h5ex_d_hyper.json  h5ex_d_nbit.json  h5ex_d_rdwr.json  h5ex_d_shuffle.json  h5ex_d_sofloat.json  h5ex_d_soint.json  h5ex_d_transform.json  h5ex_d_unlimadd.json  h5ex_d_unlimgzip.json  h5ex_d_unlimmod.json  h5ex_d_unlimod.json  (+33 more)
docs/: Makefile  Utilities.rst  conf.py  conventions.rst  index.md  index.rst  make.bat  requirements.txt  sample.json  specs.md  specs.rst
docs/Installation/: index.rst
docs/_static/: custom.css
docs/bnf/: attribute_collection.md  attribute_collection.rst  file.md  (+18 more)
h5json/: __init__.py  _version.py  hdf5db.py  hdf5dtype.py  version.py
h5tojson/: h5tojson.py
jsontoh5/: jsontoh5.py
lib/: fast_strconcat.py  hdf5db.py  hdf5dtype.py  idl.py  matlab.py  python.py  version.py
schema/: attribute.schema.json  dataset.schema.json  dataspaces.schema.json  datatypes.schema.json  file.schema.json  filters.schema.json  group.schema.json
test/: __init__.py  testall.py
util/: h5tojson.py  jsontoh5.py
(+97 files in other folders)
